  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? IAlibay, hmacdope, pillose, jaclark5, tylerjereddy

 * 2.7.0

Fixes
  * Fix Atom type guessing error (PR #4168, Issue #4167)

Enhancements

Changes
  * NumPy `in1d` replaced with `isin` in preparation for NumPy
    `2.0` (PR #4255)
  * Update documentation for SurvivalProbabilty to be more clear
    (Issue #4247)
  * Cython DEF statments have been replaced with compile time integer constants
    as DEF is deprecated as of Cython>=3.0 (Issue #4237, PR #4246)

Deprecations


08/15/23 IAlibay, jaclark5, MohitKumar020291, orionarcher, xhgchen,
         ztimol, orbeckst

 * 2.6.0

Fixes
  * Fix AtomGroup.center_of_charge(..., unwrap=True) giving
    inconsistent (but scientifically correct) results on Intel macOS
    (Issue #4211)
  * Fix Boltzmann typo in `units.py` (PR #4214, Issue #4213)
  * Fix deletion of bond/angle/dihedral types (PR #4003, Issue #4001)
  * CRD, PQR, and PDBQT writers now write BZ2 and GZ files if requested
    (PR #4163, Issue #4159)

Enhancements
  * Added a `exclude_same` kwarg to InterRDF (PR #4161)
  * LAMMPSDump Reader use of `continuous` option to stitch trajectories
    (Issue #3546)

Changes
  * Package builds are now made using NumPy 1.25 or higher. This provides
    backwards runtime compatibility with older NumPy builds within the limit
    of NEP29 (PR #4108).
  * Removed `-ffast-math` compiler flag to avoid potentially incorrect
    floating point results in MDAnalysis *and* other codes when
    MDAnalysis shared libraries are loaded --- see 
    https://moyix.blogspot.com/2022/09/someones-been-messing-with-my-subnormals.html
    (Issues #3821, #4211)
  * Atom ID representation order updated to match that of associated
    AtomGroup indices.
    (PR #4191, Issue #4181)